# csv_project

./: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py  utils.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  document.py  user.py
app/core/: base.py  config.py  db.py  init_db.py  user.py
app/core/migrations/: env.py
app/core/migrations/versions/: 6bab8a3a997d_first_migration.py
app/crud/: base.py  document.py
app/models/: __init__.py  models.py
app/schemas/: schemas.py
