[tool.poetry]
name = "csv-api-project"
version = "0.1.0"
description = ""
authors = ["Serg <ser5olovjew@yandex.ru>"]
readme = "README.md"
packages = [{include = "csv_api_project"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
alembic = "^1.12.0"
python-multipart = "^0.0.6"
pandas = "^1.3.4"
sqlalchemy = "^2.0.21"
aiosqlite = "0.17.0"
python-dotenv = "^1.0.0"
fastapi-pagination = "^0.12.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
pydantic = "1.10.11"
asyncpg = "^0.28.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
